<resources>
  <string name="app_name">pawcket</string>
  <string name="welcome">Welcome!</string>
  <string name="team_name">Dream Epic</string>
  <string name="by">By</string>
  <string name="login">Log in</string>]
  <string name="sign_up">Sign Up</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="or">Or</string>
  <string name="bg_disc">background</string>
  <string name="logo">Pawcket Logo</string>
  <string name="no_account">no account?</string>
  <string name="have_account">Have an account?</string>
  <string name="fname">First Name</string>
  <string name="lname">Last Name</string>
  <string name="user_name">User Name</string>
  <string name="dob">Date of Birth</string>
  <string name="address">Address</string>
  <string name="post_code">Post Code</string>
  <string name="tel">Telephone</string>
  <string name="extra">Extra Info</string>
  <string name="create_user">Create User</string>
  <string name="upload">Upload</string>
  <string name="Photo">Photo</string>
  <string name="placeholder">placeholder</string>
  <string name="facebook_app_id">923910035154401</string>
  <string name="fb_login_protocol_scheme">fb923910035154401</string>
  <string name="facebook_client_token">dc570bc015c59a3ed3189ee427c4d8d1</string>
  <string name="address_dashboard">Address: </string>
  <string name="address_example">Address Example....</string>
  <string name="date_of_birth_dashboard">Date of Birth:</string>
  <string name="dob_example">10 jan ....</string>
  <string name="add">+</string>
  <string name="user_image">user image</string>
  <string name="image_frame">image frame</string>
  <string name="news">news</string>
  <string name="news_feed">News Feed</string>
  <string name="example_name">Example name…</string>
  <string name="example_post">This is an example post</string>
  <string name="like">Like</string>
  <string name="comment">Comment</string>
  <string name="share">Share</string>
  <string name="open_now">Open Now</string>
  <string name="on_call">On Call</string>
  <string name="near_you">Near You</string>
  <string name="vet_name_examole">Vet Name examole…</string>
  <string name="phone">Phone: </string>
  <string name="fake_num">0156778453433210</string>
  <string name="website">Website:</string>
  <string name="bobthevat_co_uk">bobthevat.co.uk</string>
  <string name="distance">Distance:</string>
  <string name="_506_meters">506 meters</string>
  <string name="messaging">Messaging</string>
  <string name="message">Message</string>
  <string name="fake_msg">you: Hows it going mate its been a while</string>
  <string name="user_icon">User Icon</string>
  <string name="friends">Friends</string>
  <string name="my_friends">My Friends</string>
  <string name="example_friend_req">Requests (0)</string>
  <string name="search">search</string>
  <string name="unfriend">Unfriend</string>
  <string name="accept">Accept</string>
  <string name="remove">Remove</string>
  <string name="request">Request</string>
  <string name="add_friend">Add Friend</string>
  <string name="vets">Vets</string>
  <string name="misc">misc</string>
</resources>
