<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.cardview.widget.CardView
      android:id="@+id/back_btn_wrapper"
      android:layout_width="70dp"
      android:layout_height="70dp"
      android:layout_centerHorizontal="true"
      android:background="#4C1818"
      android:elevation="0dp"
      app:cardCornerRadius="600dp"
      app:cardElevation="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
  </androidx.cardview.widget.CardView>

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@string/example_name"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/back_btn_wrapper"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/friends_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@string/friends"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/back_btn_wrapper"
      app:layout_constraintTop_toBottomOf="@+id/textView11"
      app:layout_constraintVertical_bias="0.137"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="24dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="10dp"
      android:background="@drawable/friend_btn"
      android:text="@string/unfriend"
      android:textStyle="italic"
      android:textAllCaps="false"
      app:layout_constraintStart_toEndOf="@+id/back_btn_wrapper"
      app:layout_constraintTop_toBottomOf="@+id/friends_status" />
</androidx.constraintlayout.widget.ConstraintLayout>