<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.cardview.widget.CardView
      android:id="@+id/back_btn_wrapper"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:background="#4C1818"
      android:elevation="0dp"
      app:cardCornerRadius="600dp"
      app:cardElevation="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_image" />
  </androidx.cardview.widget.CardView>

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/example_name"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/black"
      app:layout_constraintStart_toEndOf="@+id/back_btn_wrapper"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@string/fake_msg"
      app:layout_constraintStart_toEndOf="@+id/back_btn_wrapper"
      tools:layout_editor_absoluteY="40dp"
      tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>